[gd_scene load_steps=3 format=3 uid="uid://cv3uf0jrjmrwd"]

[ext_resource type="Script" uid="uid://duvv84s01exbg" path="res://ui/card_icon_visual.gd" id="1_u6vvp"]
[ext_resource type="Texture2D" uid="uid://b7epbimfw2j4e" path="res://art/card_frame_low_res.png" id="2_bqeyq"]

[node name="CardIconVisual" type="Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_u6vvp")

[node name="CardArtTextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(15, 15)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="CardFrameTextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_bqeyq")
expand_mode = 1
stretch_mode = 5
